# olx_project_2

./: .env.example  .flake8  .gitignore  pyproject.toml
apps/: admin.py  filters.py  forms.py  urls.py  views.py
apps/fixtures/: announcements.json  categories.json  manufacturecategory.json  manufacturer.json
apps/models/: __init__.py  announcements.py  base.py  categories.py  managers.py  products.py  searchhistory.py  users.py  utils.py
apps/static/: style.css
root/: settings.py  urls.py
templates/apps/: add.html  announcement-list.html  login.html  main.html  product-list.html  profile.html  register.html  search.html
