[project]
name = "olx-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-filter>=25.2",
    "django-json-widget>=2.1.1",
    "django-mptt>=0.18.0",
    "flake8>=7.3.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]
